tests/annot/annot.exp
Error: annot.js:4
  4: var bar: (str:number, i:number)=> string = foo;
                                                ^^^ function. This type is incompatible with
  4: var bar: (str:number, i:number)=> string = foo;
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type
  The first parameter is incompatible:
      4: var bar: (str:number, i:number)=> string = foo;
                       ^^^^^^ number. This type is incompatible with
      1: function foo(str:string, i:number):string {
                          ^^^^^^ string

Error: annot.js:6
  6: var qux = function(str:string, i:number):number { return foo(str,i); }
                                                              ^^^^^^^^^^ string. This type is incompatible with the expected return type of
  6: var qux = function(str:string, i:number):number { return foo(str,i); }
                                              ^^^^^^ number

Error: annot.js:8
  8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `i` is incompatible:
      8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
                                                                      ^^^^^ string. This type is incompatible with
      8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
                                 ^^^^^^ number

Error: annot.js:8
  8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `j` is incompatible:
      8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `j`. Property not found in
      8: var obj: {str:string; i:number; j:boolean} = {str: "...", i: "...", k: false};
                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal

Error: annot.js:10
 10: var arr: Array<number> = [1,2,"..."];
                              ^^^^^^^^^^^ array literal. Has some incompatible type argument with
 10: var arr: Array<number> = [1,2,"..."];
              ^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     10: var arr: Array<number> = [1,2,"..."];
                                       ^^^^^ string. This type is incompatible with
     10: var arr: Array<number> = [1,2,"..."];
                        ^^^^^^ number

Error: annot.js:13
 13: var array: number[] = [1,2,"..."];
                           ^^^^^^^^^^^ array literal. Has some incompatible type argument with
 13: var array: number[] = [1,2,"..."];
                ^^^^^^^^ array type
  Type argument `T` is incompatible:
     13: var array: number[] = [1,2,"..."];
                                    ^^^^^ string. This type is incompatible with
     13: var array: number[] = [1,2,"..."];
                    ^^^^^^ number

Error: annot.js:27
 27: var test_obj: ObjType = { 'bar-foo': '23' };
                             ^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
 27: var test_obj: ObjType = { 'bar-foo': '23' };
                   ^^^^^^^ ObjType
  Property `foo-bar` is incompatible:
     27: var test_obj: ObjType = { 'bar-foo': '23' };
                       ^^^^^^^ property `foo-bar`. Property not found in
     27: var test_obj: ObjType = { 'bar-foo': '23' };
                                 ^^^^^^^^^^^^^^^^^^^ object literal

Error: annot.js:31
 31:   n = "hey"; // error
           ^^^^^ string. This type is incompatible with
 30: function param_anno(n:number):void {
                           ^^^^^^ number

Error: annot.js:45
                         v-------------------------------
 45:     batchRequests = batchRequests.map((request) => {
 46:       return {
 47:         method: request.method,
...:
 51:     });
         -^ array type. Has some incompatible type argument with
 37:     batchRequests: Array<{method: string; path: string; params: ?Object}>,
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
                      v
     46:       return {
     47:         method: request.method,
     48:         params: request.params,
     49:         relative_url: request.path,
     50:       };
               ^ object literal. This type is incompatible with
     37:     batchRequests: Array<{method: string; path: string; params: ?Object}>,
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
      Property `path` is incompatible:
         37:     batchRequests: Array<{method: string; path: string; params: ?Object}>,
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `path`. Property not found in
                          v
         46:       return {
         47:         method: request.method,
         48:         params: request.params,
         49:         relative_url: request.path,
         50:       };
                   ^ object literal

Error: annot.js:55
 55: var toz : null = 3;
                      ^ number. This type is incompatible with
 55: var toz : null = 3;
               ^^^^ null

Error: forward_ref.js:1
  1: let myClassInstance: MyClass = null; // forward ref ok, null ~> class error
                                    ^^^^ null. This type is incompatible with
  1: let myClassInstance: MyClass = null; // forward ref ok, null ~> class error
                          ^^^^^^^ MyClass

Error: forward_ref.js:4
  4:   return null; // forward ref ok, null ~> class error
              ^^^^ null. This type is incompatible with the expected return type of
  3: function bar(): MyClass {
                     ^^^^^^^ MyClass


Found 12 errors
